--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,7 @@ site_name: REPO_NAME_OR_SITE_NAME
 # defeine TOC or order of website-
 nav:
   - Home: index.md
+  - Data_Ingestion: data_ingestion.md
 
 site_author: Akash soni
 site_description: >-
@@ -24,18 +25,18 @@ theme:
   palette:
     - scheme: default
       toggle:
-        icon: material/toggle-switch-off-outline 
+        icon: material/toggle-switch-off-outline
         name: Switch to dark mode
       primary: teal
-      accent: purple 
-    - scheme: slate 
+      accent: purple
+    - scheme: slate
       toggle:
         icon: material/toggle-switch
-        name: Switch to light mode    
+        name: Switch to light mode
       primary: teal
-      accent: lime    
+      accent: lime
   # logo: PyTorch_logo_icon.svg
-  
+
 extra:
   social:
     - icon: fontawesome/brands/github-alt
@@ -62,8 +63,7 @@ markdown_extensions:
   - pymdownx.details
   - pymdownx.superfences
   - pymdownx.mark
-  
-  
+
 plugins:
   - search
 
